+ included tkinter into libPack
+ using PyUnit and unittestgui.py in test framework


Version: V0.1B80 Date: Wed Jan 07 13:36:29 2004 +++++++++++++++++++++++++++++++
+ initial Python binding using Qt's WidgetFactory framework
+ Scintilla-Binding reimplemented
+ Autowaitcursor improved
+ a first version of python console added

Version: V0.1B81 Date: Fri Jan 23 18:28:15 2004 +++++++++++++++++++++++++++++++
+ connect Python callback functions to QWidget signals

Version: V0.1B82 Date: Sat Mar 20 20:28:27 2004 +++++++++++++++++++++++++++++++
+ working configure script producing shared libraries

Version: V0.1B83 Date: Mon Apr  5 00:42:17 2004 +++++++++++++++++++++++++++++++
+ using Qt's qmake tool to build FreeCAD
+ FreeCAD now is running under Debian  in console mode :-)
   but in GUI mode it    crashes after the splashscreen appeared :-(

Version: V0.1B84 Date: Wed Apr 07 15:59:56 2004 +++++++++++++++++++++++++++++++
+ Completely rework init phase and main.cpp

Version: V0.1B85 Date: Sun Apr 18 01:22:41 2004 +++++++++++++++++++++++++++++++
+ Configure script finished, FreeCAD is now running under Linux :-)),
   start linux port of the modules now

Version: V0.1B86 Date: Thu May 06 21:15:32 2004 +++++++++++++++++++++++++++++++
+ removed EnvPrints and put it in Config

Version: V0.1B87 Date: Thu Jun 03 23:47:13 2004 +++++++++++++++++++++++++++++++
+ several minor bugs fixed
+ load settings at startup made in preferences
+ use Qt splashscreen

Version: V0.1B89 Date: Fri Aug 20 19:03:18 2004 +++++++++++++++++++++++++++++++
+ pimple App/Application and App/Document
+ change python export

Version: V0.1B90 Date: Tue Sep 07 19:25:03 2004 +++++++++++++++++++++++++++++++
+ Clean up path finding
+ port to OCC 5.2
  - switch to new iostream (finaly!!!)

Version: V0.1B91 Date: Tue Sep 21 15:34:55 2004 +++++++++++++++++++++++++++++++
+ New organsiation of Build scripts in fcbt (FreeCADBuildTool)
+ first experiments with namespaces With Console (FCConsole) and Interpreter